# prediction-market-weather

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  OBSERVABILITY.md  README.md  ROADMAP.md  eval.py  pyproject.toml  signal.py  signal_cli.py
config/: cities.yml  stations.yml
docs/: 2026-03-22_session-progress.md  BETTING_INSIGHTS.md  BETTING_PLATFORM_ARCHITECTURE.md  HISTORICAL_FORECAST_ARCHIVE_PLAN.md  LOCAL_WEB_APP.md
notebooks/: README.md
prediction_market_weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: arb_scan.py  bootstrap_db.sh  extract_kalshi_weather.py  fetch_live_markets.py  intraday_scan.py  macro_scan.py  morning_scan.py  run_parser_audit.py  seed_live_orders.py  settle_markets.py  settle_paper_bets_march23.py  setup_env.sh
self-improvement/: README.md
sql/: README.md
tests/: test_arb_scan.py  test_archived_nws_forecasts.py  test_asos.py  test_auto_bet.py  test_bootstrap_and_logging.py  test_calibration_reviews.py  test_chief_queries.py  test_city_diagnostics.py  test_coldmath_scan.py  test_contract_parser.py  test_decision_replay.py  test_domain_namespaces.py  test_end_to_end_training_row.py  test_evaluation.py  test_forecast_archive_plan.py  test_historical_forecasts.py  test_kalshi_history.py  test_kalshi_live.py  test_kalshi_settlement.py  test_learning.py  test_live_betting_ops.py  test_live_history_queries.py  test_live_orders.py  test_live_persistence.py  test_live_web_app.py  test_live_workflow.py  test_macro_scan.py  test_morning_scan.py  test_nws_cli.py  test_open_meteo.py  test_parser_audit.py  (+4 more)
(+102 files in other folders)
