[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-weather"
version = "0.1.0"
description = "Weather-first research and trading infrastructure for prediction markets"
requires-python = ">=3.11"
dependencies = [
  "duckdb",
  "pandas",
  "pyyaml",
  "requests",
  "pydantic",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["weatherlab*"]
