[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-weather"
version = "0.1.0"
description = "Weather-first research and trading infrastructure for prediction markets"
requires-python = ">=3.11"
dependencies = [
  "cryptography",
  "duckdb",
  "fastapi",
  "httpx",
  "jinja2",
  "pandas",
  "pyyaml",
  "requests",
  "pydantic",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["weatherlab*"]

[tool.setuptools.package-data]
"weatherlab.live.web" = ["templates/*.html", "static/*.css"]
